tests/invalid/06_expression_starts_with_operator.brl
flag := or true;
print flag;
